# generic-ml-workflow

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  noxfile.py  pyproject.toml  pyrightconfig.json  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  sonar.yml
docs/: DESIGN.md  ROADMAP.md
src/generic_ml_workflow/: __init__.py
src/generic_ml_workflow/core/: __init__.py  builtin_bodies.py  config.py  contract.py  cost.py  deps.py  detect.py  discovery.py  envelope.py  events.py  eventtypes.py  loader.py  orchestrator.py  paths.py  probe.py  reconcile.py  runner.py  shotrunner.py  stamp.py  stopping.py  usage.py
src/generic_ml_workflow/repl/: __init__.py  app.py  banner.py  shell.py
tests/: conftest.py  test_app.py  test_banner.py  test_builtin_bodies.py  test_config.py  test_contract.py  test_cost.py  test_deps.py  test_detect.py  test_discovery.py  test_envelope.py  test_event_payload_discipline.py  test_events.py  test_eventtypes.py  test_loader.py  test_orchestrator.py  test_paths.py  test_probe.py  test_reconcile.py  test_repl.py  test_runner.py  test_shotrunner.py  test_stamp.py  test_stopping.py  test_usage.py  test_version.py  test_wall.py  test_wheel_purity.py
tests/data/: demo.yaml
tools/hooks/: check-commit-msg.sh  guard-branch.sh
